// Original file: src/proto/proto/profile.proto


export interface QueryProfile {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'gender'?: (string);
  'type'?: (string);
  'dob'?: (string);
  'cityId'?: (number);
  'description'?: (string);
  'investDescription'?: (string);
  'userId'?: (number);
  'dobYear'?: (string);
  'id_number'?: (string);
  'minRange'?: (number | string);
  'maxRange'?: (number | string);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_firstName'?: "firstName";
  '_lastName'?: "lastName";
  '_gender'?: "gender";
  '_type'?: "type";
  '_dob'?: "dob";
  '_cityId'?: "cityId";
  '_description'?: "description";
  '_investDescription'?: "investDescription";
  '_userId'?: "userId";
  '_dobYear'?: "dobYear";
  '_id_number'?: "id_number";
  '_minRange'?: "minRange";
  '_maxRange'?: "maxRange";
}

export interface QueryProfile__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'gender'?: (string);
  'type'?: (string);
  'dob'?: (string);
  'cityId'?: (number);
  'description'?: (string);
  'investDescription'?: (string);
  'userId'?: (number);
  'dobYear'?: (string);
  'id_number'?: (string);
  'minRange'?: (number);
  'maxRange'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_firstName': "firstName";
  '_lastName': "lastName";
  '_gender': "gender";
  '_type': "type";
  '_dob': "dob";
  '_cityId': "cityId";
  '_description': "description";
  '_investDescription': "investDescription";
  '_userId': "userId";
  '_dobYear': "dobYear";
  '_id_number': "id_number";
  '_minRange': "minRange";
  '_maxRange': "maxRange";
}
